--- a/final notebook.ipynb
+++ b/final notebook.ipynb
@@ -9,12 +9,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab5cb60-aab0-444b-b416-91b8fd3fe8c3",
+   "cell_type": "markdown",
+   "id": "a7f5bdb2-a334-4c6f-97eb-7e2e7622292b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Neighborhood Watch: Finding the Best Neighborhood in Pittsburgh\n",
+    "\n",
+    "Our project, **Neighborhood Watch**, seeks to answer a critical question for residents, families, and city planners alike:  \n",
+    "**What is the best neighborhood in Pittsburgh?**  \n",
+    "\n",
+    "Using open data from the **Western Pennsylvania Regional Data Center (WPRDC)**, our team conducted a multi-factor analysis of Pittsburgh’s neighborhoods to evaluate quality-of-life indicators.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Our Approach\n",
+    "\n",
+    "We began by identifying which factors most significantly impact the day-to-day experiences of residents.  \n",
+    "After exploring several alternatives—including metrics focused on:\n",
+    "\n",
+    "1. **Public Safety** *(Arrest Rates)*  \n",
+    "2. **Child-Friendly Amenities** *(Playgrounds)*  \n",
+    "3. **Community Vitality** *(School Enrollment)*\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Why These Metrics?\n",
+    "\n",
+    "These categories reflect the qualities most people care about when choosing a neighborhood:\n",
+    "\n",
+    "- **Safety**\n",
+    "- **Opportunities for youth**\n",
+    "- **Signs of a thriving population**\n",
+    "\n",
+    "Each dataset represents a different, yet complementary, aspect of what makes a neighborhood **livable and welcoming**.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,12 +53,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdf03c25-cfc8-4499-b319-eeddceda9505",
+   "cell_type": "markdown",
+   "id": "9066c134-da65-4058-a460-d5e52a3a446e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To objectively evaluate Pittsburgh’s neighborhoods, we designed a composite scoring system that combines three features:\n",
+    "\n",
+    "- **Arrest Rate (Weight: 45%)**  \n",
+    "  Interpreted as a measure of safety; fewer arrests imply a safer neighborhood.  \n",
+    "  Dataset: Arrest Data\n",
+    "\n",
+    "- **Playgrounds per Neighborhood (Weight: 20%)**  \n",
+    "  Acts as a proxy for recreational and family-friendly infrastructure.  \n",
+    "  Dataset: Playgrounds Dataset\n",
+    "\n",
+    "- **Student Enrollment Numbers (Weight: 35%)**  \n",
+    "  Reflects the population of families and the strength of the local educational community.  \n",
+    "  Dataset: Pittsburgh Public Schools Enrollment\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Scoring Method\n",
+    "\n",
+    "Each neighborhood is assigned a score from 0 to 1 for each metric, where:\n",
+    "\n",
+    "- A higher Playgrounds or Enrollment score is better  \n",
+    "- A lower Arrest rate results in a higher normalized score (i.e., inverse relationship)\n",
+    "\n",
+    "We then apply the assigned weights to these normalized scores and compute a final composite score for each neighborhood:\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
