damn near final changhes

--- a/final notebook.ipynb
+++ b/final notebook.ipynb
@@ -20,8 +20,6 @@
     "\n",
     "Using open data from the **Western Pennsylvania Regional Data Center (WPRDC)**, our team conducted a multi-factor analysis of Pittsburgh’s neighborhoods to evaluate quality-of-life indicators.\n",
     "\n",
-    "---\n",
-    "\n",
     "## Our Approach\n",
     "\n",
     "We began by identifying which factors most significantly impact the day-to-day experiences of residents.  \n",
@@ -30,16 +28,6 @@
     "1. **Public Safety** *(Arrest Rates)*  \n",
     "2. **Child-Friendly Amenities** *(Playgrounds)*  \n",
     "3. **Community Vitality** *(School Enrollment)*\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Why These Metrics?\n",
-    "\n",
-    "These categories reflect the qualities most people care about when choosing a neighborhood:\n",
-    "\n",
-    "- **Safety**\n",
-    "- **Opportunities for youth**\n",
-    "- **Signs of a thriving population**\n",
     "\n",
     "Each dataset represents a different, yet complementary, aspect of what makes a neighborhood **livable and welcoming**.\n"
    ]
@@ -209,6 +197,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bcaf40c2-25b3-4ad0-b9b8-f4a6c5d3dfd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      neighborhood  total_arrests  safety_score\n",
+      "82  Swisshelm Park              8      0.997117\n",
+      "67       Ridgemont              9      0.996757\n",
+      "20       Chartiers             11      0.996036\n",
+      "66   Regent Square             12      0.995676\n",
+      "68     Saint Clair             12      0.995676\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the arrests dataset\n",
+    "arrests_data = pd.read_csv(\"arrests.csv\")\n",
+    "\n",
+    "# Count total arrests per neighborhood (case-insensitive column fix)\n",
+    "arrests_grouped = arrests_data.groupby('Neighborhood', as_index=False).size()\n",
+    "arrests_grouped.columns = ['neighborhood', 'total_arrests']\n",
+    "\n",
+    "# Score: lower arrests = higher safety score\n",
+    "arrests_grouped['safety_score'] = 1 - (arrests_grouped['total_arrests'] / arrests_grouped['total_arrests'].max())\n",
+    "\n",
+    "# Preview safest neighborhoods\n",
+    "print(arrests_grouped.sort_values(by='safety_score', ascending=False).head())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "27161126-4c20-41f1-9007-26f8f07d72df",
    "metadata": {},
@@ -351,6 +375,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "559465e5-240f-4b26-8012-060bb8656995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           neighborhood  playgrounds_count  playgrounds_score\n",
+      "56  Squirrel Hill South                  8              0.064\n",
+      "52    South Side Slopes                  5              0.040\n",
+      "4             Beechview                  5              0.040\n",
+      "29        Highland Park                  4              0.032\n",
+      "5           Beltzhoover                  4              0.032\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load and score playground data\n",
+    "playground_data = pd.read_csv(\"playgrounds.csv\")\n",
+    "playgrounds_grouped = playground_data.groupby('neighborhood', as_index=False).size()\n",
+    "playgrounds_grouped.columns = ['neighborhood', 'playgrounds_count']\n",
+    "\n",
+    "# Use total playgrounds for score instead of max\n",
+    "total_playgrounds = playgrounds_grouped['playgrounds_count'].sum()\n",
+    "playgrounds_grouped['playgrounds_score'] = playgrounds_grouped['playgrounds_count'] / total_playgrounds\n",
+    "\n",
+    "# Show top playground neighborhoods\n",
+    "print(playgrounds_grouped.sort_values(by='playgrounds_score', ascending=False).head())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8a9ce503-7ee4-4980-8bd5-8df5be6c60af",
    "metadata": {},
@@ -476,6 +535,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0e6b02cc-c9cc-4ebc-971b-2b17b804fc99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           neighborhood  enrolled_students  enrollment_score\n",
+      "14              Carrick               1276          0.057087\n",
+      "12            Brookline               1169          0.052300\n",
+      "6             Beechview                794          0.035523\n",
+      "67             Sheraden                694          0.031049\n",
+      "74  Squirrel Hill South                679          0.030378\n",
+      "Total enrolled students across all neighborhoods: 22352\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load and score enrollment data\n",
+    "enrollment_data = pd.read_csv(\"special enrollment.csv\")\n",
+    "enrollment_grouped = enrollment_data.groupby('neighborhood', as_index=False)['enrolled_students'].sum()\n",
+    "enrollment_grouped['enrollment_score'] = enrollment_grouped['enrolled_students'] / 22352\n",
+    "\n",
+    "# Preview top neighborhoods by enrollment score\n",
+    "print(enrollment_grouped.sort_values(by='enrollment_score', ascending=False).head())\n",
+    "\n",
+    "# Print total enrolled students\n",
+    "print(\"Total enrolled students across all neighborhoods:\", enrollment_grouped['enrolled_students'].sum())\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eb78a9d9-9c3b-4812-bfb9-503a62847c99",
    "metadata": {},
@@ -485,11 +580,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f688f124-edea-4701-be5d-9cde7941dae1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           neighborhood  enrollment_score  safety_score  playgrounds_score  \\\n",
+      "74  Squirrel Hill South          0.030378      0.989353              0.064   \n",
+      "6             Beechview          0.035523      0.991216              0.040   \n",
+      "12            Brookline          0.052300      0.985413              0.016   \n",
+      "14              Carrick          0.057087      0.969123              0.024   \n",
+      "67             Sheraden          0.031049      0.984561              0.032   \n",
+      "37        Highland Park          0.018432      0.993558              0.032   \n",
+      "7           Beltzhoover          0.011319      0.995315              0.032   \n",
+      "36            Hazelwood          0.025725      0.987330              0.024   \n",
+      "34           Greenfield          0.021788      0.993771              0.016   \n",
+      "19      Crafton Heights          0.024114      0.991748              0.016   \n",
+      "\n",
+      "    final_score  \n",
+      "74     0.468641  \n",
+      "6      0.466480  \n",
+      "12     0.464941  \n",
+      "14     0.460886  \n",
+      "67     0.460320  \n",
+      "37     0.459953  \n",
+      "7      0.458253  \n",
+      "36     0.458102  \n",
+      "34     0.458023  \n",
+      "19     0.457927  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load all three datasets\n",
+    "enrollment_data = pd.read_csv(\"special enrollment.csv\")\n",
+    "playground_data = pd.read_csv(\"playgrounds.csv\")\n",
+    "arrests_data = pd.read_csv(\"arrests.csv\")\n",
+    "\n",
+    "# --- ENROLLMENT ---\n",
+    "enrollment_grouped = enrollment_data.groupby('neighborhood', as_index=False)['enrolled_students'].sum()\n",
+    "total_enrollment = enrollment_grouped['enrolled_students'].sum()\n",
+    "enrollment_grouped['enrollment_score'] = enrollment_grouped['enrolled_students'] / total_enrollment\n",
+    "\n",
+    "# --- PLAYGROUNDS ---\n",
+    "playgrounds_grouped = playground_data.groupby('neighborhood', as_index=False).size()\n",
+    "playgrounds_grouped.columns = ['neighborhood', 'playgrounds_count']\n",
+    "total_playgrounds = playgrounds_grouped['playgrounds_count'].sum()\n",
+    "playgrounds_grouped['playgrounds_score'] = playgrounds_grouped['playgrounds_count'] / total_playgrounds\n",
+    "\n",
+    "# --- ARRESTS ---\n",
+    "arrests_grouped = arrests_data.groupby('Neighborhood', as_index=False).size()\n",
+    "arrests_grouped.columns = ['neighborhood', 'total_arrests']\n",
+    "total_arrests = arrests_grouped['total_arrests'].sum()\n",
+    "arrests_grouped['safety_score'] = 1 - (arrests_grouped['total_arrests'] / total_arrests)\n",
+    "\n",
+    "# --- COMBINE ALL SCORES ---\n",
+    "combined = pd.merge(enrollment_grouped[['neighborhood', 'enrollment_score']], arrests_grouped[['neighborhood', 'safety_score']], on='neighborhood', how='outer')\n",
+    "combined = pd.merge(combined, playgrounds_grouped[['neighborhood', 'playgrounds_score']], on='neighborhood', how='outer')\n",
+    "\n",
+    "# Replace missing scores with 0\n",
+    "combined.fillna(0, inplace=True)\n",
+    "\n",
+    "# Apply weights\n",
+    "weights = {\n",
+    "    'enrollment_score': 0.35,\n",
+    "    'playgrounds_score': 0.20,\n",
+    "    'safety_score': 0.45\n",
+    "}\n",
+    "\n",
+    "combined['final_score'] = (\n",
+    "    combined['enrollment_score'] * weights['enrollment_score'] +\n",
+    "    combined['playgrounds_score'] * weights['playgrounds_score'] +\n",
+    "    combined['safety_score'] * weights['safety_score']\n",
+    ")\n",
+    "\n",
+    "# Sort and show best neighborhoods\n",
+    "best_neighborhoods = combined.sort_values(by='final_score', ascending=False)\n",
+    "print(best_neighborhoods.head(10))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -500,9 +673,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d8a5f35-fdcd-4f43-ab29-4d086b401db7",
+   "metadata": {},
+   "source": [
+    "### 🏆 Conclusion: Best Neighborhood in Pittsburgh\r\n",
+    "\r\n",
+    "According to the final composite metric—which combines **enrollment (35%)**, **playground availability (20%)**, and **safety (45%)**—the best neighborhood in Pittsburgh is **Squirrel Hill South**. It achieved the **highest overall score** due to its excellent safety rating and a strong balance of educational and recreational infrastructure. These factors make it the top-performing and most well-rounded neighborhood in our data-driven analysis.\r\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6276686-a7cc-4a97-ad47-9b4c059964f5",
+   "id": "62379f56-8f70-4ad2-9c84-911b75684883",
    "metadata": {},
    "outputs": [],
    "source": []
